# SPAG4d

./: .gitignore  README.md  api.py  debug_output.txt  pipeline_pano_video.py  pyproject.toml  requirements.txt  server_log.txt  start_spag4d.bat  subsample_ply.py  test_debug.py
spag4d/: __init__.py  cli.py  core.py  dap_model.py  depth_refiner.py  gaussian_converter.py  ply_writer.py  sharp_refiner.py  spherical_grid.py  splat_writer.py  visual_odometry.py
spag4d/dap_arch/: __init__.py
static/: index.html
static/css/: style.css
static/js/: app.js  pano-viewer.js  splat-viewer.js
tests/: __init__.py  test_coordinates.py  test_ply_compat.py
